# notifier-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  web_app_notifier_client.py
src/notifier_client/: utils.py  web_app_notifier_client.py
src/telegram_notifier_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
